--- a/public/ui/templates/index.html
+++ b/public/ui/templates/index.html
@@ -4,14 +4,14 @@
     
 <title>Page Title</title>
     
-    <link rel="stylesheet" type="text/css" href="/public/css/skeleton.css">
-    <link rel="stylesheet" type="text/css" href="/public/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/ui/static/css/skeleton.css">
+    <link rel="stylesheet" type="text/css" href="/ui/static/css/main.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <script src="/lib/jquery-2.1.4.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     
     
-    <script src="/public/js/main.js"></script>
+    <script src="/ui/static/js/main.js"></script>
     
 </head>
 <body>
@@ -28,7 +28,7 @@
       <div class="row">
             <div class="four columns red">
                 <p>AVATAR</p>
-                <img src= "/public/images/default-avatar01.jpg">
+                <img src= "/ui/static/images/default-avatar01.jpg">
                 <p class="hp">HEALTH</p>
                     <input class="health-bar">
                 <p class="xp">EXPERIENCE</p>
