--- a/public/ui/templates/index.html
+++ b/public/ui/templates/index.html
@@ -30,14 +30,21 @@
                 <p>AVATAR</p>
                 <img src= "/ui/static/images/default-avatar01.jpg">
                 <p class="hp">HEALTH</p>
-                    <input class="health-bar">
+                <div class="health-bar">
+                    <div class="health-bar-value">
+                    </div>
+                </div>
                 <p class="xp">EXPERIENCE</p>
-                <p class="status">STATUS</p>
+                <div class="xp-bar">
+                    <div class="xp-bar-value">
+                    </div>
+                </div>
+                <p class="status">NEST STATUS</p>
             </div>
 
             <div class="four columns blue">
                 <p>SKILLS</p>
-                <button>Pay Bills On Time</button>
+                <button class="skills">Pay Bills On Time</button>
                 <br>
                 <button>Low Food Costs</button>
                 <br>
