--- a/public/ui/templates/index.html
+++ b/public/ui/templates/index.html
@@ -46,17 +46,17 @@
                 <p>SKILLS</p>
                 <button class="skills">Pay Bills On Time</button>
                 <br>
-                <button>Low Food Costs</button>
+                <button class="skills">Low Food Costs</button>
                 <br>
-                <button>Specific Budget Goal</button>
+                <button class="skills">Specific Budget Goal</button>
             </div>
             <div class="four columns yellow">
                 <p>REWARDS</p>
-                <button>Clothes</button>
+                <button class="rewards">Clothes</button>
                 <br>
-                <button>Shoes</button>
+                <button class="rewards">Shoes</button>
                 <br>
-                <button>Chocolate</button>
+                <button class="rewards">Chocolate</button>
             </div>
             
         </div>
