login ui formatting

--- a/public/ui/static/css/login.css
+++ b/public/ui/static/css/login.css
@@ -42,8 +42,8 @@ body
 
 .form-inline
 {
-    text-align: justify;
-    height: 10em;
+    text-align: center;
+    height: 30em;
     font-family: 'Raleway', sans-serif;
     margin-left: auto;
     background-color: #F8FFF4;
