--- a/public/ui/templates/index.html
+++ b/public/ui/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     
-<title>Page Title</title>
+<title>Real Life</title>
     
     <link rel="stylesheet" type="text/css" href="/ui/static/css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="/ui/static/css/main.css">
@@ -18,7 +18,7 @@
     
     <!--this is the brief description at the top of the page-->
     <div class="nav">
-        <h1>Using the Capital One API we are gamifying the banking and money managing experience while introducing rewards for good practices and reprucussions for irresponsible spending</h1>
+        <h1>Using the Capital One API we are gamifying the banking and money managing experience while introducing rewards for good practices and reperucussions for irresponsible spending</h1>
     </div>
 
   <!-- these are the three middle columns-->  
